force-app/main/default/objects/Delivery_Note__c/Delivery_Note__c.object-meta.xml
<CustomObject>
    <description>Proof-of-delivery document for a Shipment Lot. Marked custom on the whiteboard.</description>
    <label>Delivery Note</label>
    <nameField>
        <displayFormat>DN-{00000}</displayFormat>
        <label>Delivery Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>