force-app/main/default/objects/Delivery_Note__c/fields/Proof_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Delivery</label>
    <type>Checkbox</type>
</CustomField>