force-app/main/default/objects/Delivery_Note__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>