force-app/main/default/objects/Delivery_Note__c/fields/Shipment_Lot__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Lot__c</fullName>
    <description>Shipment lot this delivery note confirms.</description>
    <label>Shipment Lot</label>
    <referenceTo>Shipment_Lot__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>