force-app/main/default/objects/Delivery_Note__c/validationRules/Signed_Requires_POD.validationRule-meta.xml
<ValidationRule>
    <fullName>Signed_Requires_POD</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, "Signed") &amp;&amp; Proof_of_Delivery__c = FALSE</errorConditionFormula>
    <errorDisplayField>Proof_of_Delivery__c</errorDisplayField>
    <errorMessage>Proof of Delivery must be checked when Status is Signed.</errorMessage>
</ValidationRule>