force-app/main/default/objects/Delivery_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shipment_Lot__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>